# surgical-risk-prediction-SBM

./: README.md  app.py  doctor_app.py  flask_app.py  prepare.py  pyproject.toml  requirements.txt  sample_input.json
.claude/: settings.local.json
configs/: doctor_settings.json  grid_search.json  old_test.json  parameters.json  postoperative.json  preoperative.json  preoperative_reduced.json
configs/gridsearch/complications_30d/: best_parameters.json  (+1 more)
experiments/: evaluate_gridsearch.sh  grid_search.sh  predict.sh  train_from_gridsearch.sh  train_model.sh
gridsearch/KPS_Discharge Worsened/: best_parameters.json
gridsearch/New neurological deficits/: best_parameters.json
gridsearch/Severe complication/: best_parameters.json
outputs/: _debug_progress.json  category_options.json
outputs/KPS_Discharge Worsened/: benchmark_summary.csv  metadata.json
outputs/New neurological deficits/: benchmark_summary.csv  metadata.json
outputs/Severe complication/: benchmark_summary.csv  metadata.json
outputs/_debug_progress_run/: benchmark_summary.csv  metadata.json
outputs/_debug_train/: benchmark_summary.csv  metadata.json
outputs/_debug_train_after_fix/: benchmark_summary.csv  metadata.json
outputs/_debug_train_final/: benchmark_summary.csv  metadata.json
outputs/_debug_train_loky/: benchmark_summary.csv  metadata.json
outputs/complications_30d/: benchmark_summary.csv  metadata.json
src/: evaluate.py  preprocessing.py  train.py  tune.py
src/nn/: torch_ft_transformer.py  torch_mlp.py
src/utils/: logger.py  vis.py
templates/: doctor.html  index.html
(+531 files in other folders)
