[project]
name = "medmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyascii>=0.3.3",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
]
